--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".config/nvim-conf"]
 	path = .config/nvim
 	url = git@github.com:contini-aron/nvim-conf.git
+[submodule "qtile-conf"]
+	path = .config/qtile
+	url = git@github.com:contini-aron/qtile-conf.git
